Fix form error tooltip alignment

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -1,5 +1,9 @@
-.form-condensed .control-group
-  margin-bottom: 0
+.form-condensed
+  .control-group,
+    margin-bottom: 10px
+
+  input
+    margin-bottom: 0
 
 %floating-error
   font-size: 12px
@@ -32,7 +36,7 @@
   .control-group.error
     .help-inline,
       @extend %floating-error
-      bottom: -25px
+      bottom: -35px
 
     input:focus + .help-inline
       display: block
